@@ -589,18 +589,12 @@ If set to a true value, the cookie will be restricted to HTTPS requests.
 
 =back
 
-=head3 response_charset
-
-  my $charset = $cgi->response_charset;
-
-Charset to use when rendering C<text>, C<html>, or C<xml> response data,
-defaults to C<UTF-8>.
-
 =head3 set_response_charset
 
   $cgi = $cgi->set_response_charset('UTF-8');
 
-Sets L</"response_charset">.
+Set charset to use when rendering C<text>, C<html>, or C<xml> response data,
+defaults to C<UTF-8>.
 
 =head3 set_nph
 
@@ -642,8 +636,8 @@ passed in the first call to C<render>, or to C<application/octet-stream> if
 there is no more appropriate value.
 
 C<html>, C<xml>, or C<text> data is expected to be decoded characters, and will
-be encoded according to L</"response_charset">. C<json> data will be encoded to
-UTF-8.
+be encoded according to L</"set_response_charset"> (UTF-8 by default). C<json>
+data will be encoded to UTF-8.
 
 C<redirect> will set a C<Location> header if response headers have not yet been
 rendered, and will set a response status of 302 if none has been set by
